workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:37:41 **** Build of configuration release for project tictoc ****
make MODE=release all 
txt1.cc
Creating executable: out/gcc-release//tictoc
16:47:40 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
16:56:59 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
16:57:07 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
16:58:06 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
09:32:50 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
11:10:51 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
13:14:07 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
13:14:51 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
13:15:46 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
13:16:06 **** Incremental Build of configuration debug for project tictoc ****
make MODE=debug all 
txt1.cc
Creating executable: out/gcc-debug//tictoc_dbg
13:17:12 **** Incremental Build of configuration debug for project tictoc ****
make MODE=debug all 
make: Nothing to be done for 'all'.
13:17:42 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
13:18:38 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
13:38:27 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
13:38:51 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
13:39:34 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
13:40:04 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
13:40:21 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
13:40:47 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
14:11:05 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
14:11:53 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
14:13:17 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
14:21:32 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
14:36:53 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
14:37:08 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
15:44:43 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
15:45:27 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
15:45:45 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
15:47:20 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
15:49:17 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
15:54:21 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
15:58:06 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
txt1.cc
txt1.cc:32:6: error: ‘Txc1’ has not been declared
   32 | void Txc1::initialize()
      |      ^~~~
txt1.cc: In function ‘void initialize()’:
txt1.cc:39:23: error: ‘getName’ was not declared in this scope; did you mean ‘getdate’?
   39 |     if (strcmp("tic", getName()) == 0) {
      |                       ^~~~~~~
      |                       getdate
txt1.cc:43:9: error: ‘send’ was not declared in this scope
   43 |         send(msg, "out");
      |         ^~~~
txt1.cc: At global scope:
txt1.cc:47:6: error: ‘Txc1’ has not been declared
   47 | void Txc1::handleMessage(cMessage *msg)
      |      ^~~~
txt1.cc: In function ‘void handleMessage(omnetpp::cMessage*)’:
txt1.cc:53:5: error: ‘send’ was not declared in this scope
   53 |     send(msg, "out"); // send out the message
      |     ^~~~
make: *** [Makefile:107: out/gcc-release//txt1.o] Error 1
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
15:58:51 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
txt1.cc
txt1.cc:32:6: error: ‘Txc1’ has not been declared
   32 | void Txc1::initialize()
      |      ^~~~
txt1.cc: In function ‘void initialize()’:
txt1.cc:39:23: error: ‘getName’ was not declared in this scope; did you mean ‘getdate’?
   39 |     if (strcmp("k12", getName()) == 0) {
      |                       ^~~~~~~
      |                       getdate
txt1.cc:43:9: error: ‘send’ was not declared in this scope
   43 |         send(msg, "out");
      |         ^~~~
make: *** [Makefile:107: out/gcc-release//txt1.o] Error 1
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
15:59:35 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
txt1.cc
Creating executable: out/gcc-release//tictoc
16:01:36 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
txt1.cc
Creating executable: out/gcc-release//tictoc
16:02:20 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
txt1.cc
Creating executable: out/gcc-release//tictoc
16:03:48 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
16:04:28 **** Incremental Build of configuration release for project tictoc ****
make MODE=release all 
make: Nothing to be done for 'all'.
